# EigenExa

./: .ReleaseNotes.txt.swp  LICENCE.txt  Makefile.am  README.md  ReleaseNotes.txt  bootstrap  cleanup  configure.ac
C/: EigenExa.c  EigenExa.fh  EigenExa.h  Makefile  Makefile.am  eigen_exa_interfaces.F90  eigen_exa_interfaces.h  test.c
benchmark/: IN  IN-x  IN_GEV  KMATH_EIGEN_GEV_check.f  KMATH_EIGEN_GEV_main.f  Makefile.am  check.sh  ev_test.f  main2.f  mat_set.f  w_test.f
benchmark_h/: IN  Makefile.am  bench_eigen.f  bench_eigen_h.f  check_h.sh  check_s.sh  mat_set.f  mat_set_h.f
benchmark_h/run_timer1/: IN-Frank  IN-Random  build.sh  eigenexa_benchmark
benchmark_h/run_timer1/1ppn/00001/: run-00001-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00002/: run-00002-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00004/: run-00004-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00008/: run-00008-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00016/: IN  run-00016-1ppn-large.sh  run-00016-1ppn-large.sh.31018950.stats  run-00016-1ppn-large.sh.31018965.out  run-00016-1ppn-large.sh.31018965.stats
benchmark_h/run_timer1/1ppn/00016/output.31018965/0/: stdout.1.0
benchmark_h/run_timer1/1ppn/00032/: run-00032-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00064/: run-00064-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00128/: IN-Random  run-00128-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00256/: run-00256-1ppn-large.sh
benchmark_h/run_timer1/1ppn/00512/: run-00512-1ppn-large.sh
benchmark_h/run_timer1/1ppn/01024/: run-01024-1ppn-large.sh
benchmark_h/run_timer1/1ppn/02048/: run-02048-1ppn-large.sh
benchmark_h/run_timer1/1ppn/04096/: run-04096-1ppn-large.sh
benchmark_h/run_timer1/1ppn/08192/: run-08192-1ppn-large.sh
benchmark_h/run_timer1/2ppn/00001/: run-00001-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00002/: run-00002-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00004/: run-00004-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00008/: run-00008-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00016/: run-00016-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00032/: run-00032-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00064/: run-00064-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00128/: run-00128-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00256/: run-00256-2ppn-large.sh
benchmark_h/run_timer1/2ppn/00512/: run-00512-2ppn-large.sh
benchmark_h/run_timer1/2ppn/01024/: run-01024-2ppn-large.sh
benchmark_h/run_timer1/2ppn/02048/: run-02048-2ppn-large.sh
benchmark_h/run_timer1/2ppn/04096/: run-04096-2ppn-large.sh
benchmark_h/run_timer1/2ppn/08192/: run-08192-2ppn-large.sh
benchmark_h/run_timer1/4ppn/00001/: run-00001-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00002/: run-00002-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00004/: run-00004-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00008/: run-00008-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00016/: run-00016-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00032/: run-00032-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00064/: run-00064-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00128/: run-00128-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00256/: run-00256-4ppn-large.sh
benchmark_h/run_timer1/4ppn/00512/: run-00512-4ppn-large.sh
benchmark_h/run_timer1/4ppn/01024/: IN-Frank  eigenexa_benchmark  run-01024-4ppn-large.sh
benchmark_h/run_timer1/4ppn/02048/: run-02048-4ppn-large.sh
benchmark_h/run_timer1/4ppn/04096/: run-04096-4ppn-large.sh
benchmark_h/run_timer1/4ppn/08192/: run-08192-4ppn-large.sh
src/: ALLREDUCE_hand.f90  CSTAB.F  CSTAB.F-orig  CSTAB.h  FS2eigen_PDLASRT.F90  FS_EDC.F90  FS_MERGE_D.F90  FS_PDLAED0.F90  FS_PDLAED1.F90  FS_PDLAED2.F90  FS_PDLAED3.F90  FS_PDLAEDZ.F90  FS_PDLASRT.F90  FS_REDUCE_ZD.F90  FS_const.F90  FS_dividing.F90  FS_libs.F90  FS_memory_internal.F  FS_prof.F90  KMATH_EIGEN_GEV.F  KMATH_EIGEN_GEV_1.F  KMATH_EIGEN_GEV_2.F  KMATH_EIGEN_GEV_misc.F  MPI_Allreduce_group.F90  Makefile.am  bisect.F  bisect2.F  comm.F  comm_h.F  dc2.F  dc2_FS.F  dc_redist1.F  dc_redist1_r.F  dc_redist2.F  dc_redist2_r.F  dcx.F  dlacpy.F  eigen_FS.F  eigen_blacs.F  eigen_dc.F  (+56 more)
